ROCK-6542 Fixed header spacing

--- a/Plugins/org.secc.Themes/Themes/SECC2024/Styles/layout.scss
+++ b/Plugins/org.secc.Themes/Themes/SECC2024/Styles/layout.scss
@@ -345,7 +345,7 @@ nav ul {
 	}
 
 	.fine-print {
-		align-items: start;
+		align-items: flex-start;
 		display: flex;
 		flex-direction: row-reverse;
 		font-size: 14px;
